About kısına t eklendi

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="row d-flex justify-content-center" id="navBtnGroup">
           <div class="col d-flex" id="colors">
             <a href="">PORTFOLIO</a>
-            <a href="">ABOUT</a>
+            <a href="">ABOUTT</a>
           </div>
         </div>
         <button class="navToggler">
