--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Freelancer - Start Bootstrap Theme
-    </title>
+    <title>Freelancer - Start Bootstrap Theme</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -13,20 +12,21 @@
       src="https://kit.fontawesome.com/3f4b27e904.js"
       crossorigin="anonymous"
     ></script>
-    <div class="navbar">
-      <div class="container-fluid d-flex justify-content-evenly" id="navMain">
+    <div class="navbar navbar-expand-sm" id="navComp">
+      <div class="container-fluid d-flex justify-content-evenly">
         <div class="col-4">
-          <h1><a href="" class="text-light">START BOOTSTRAP</a></h1>
+          <a class="navbar-brand text-white href="#start-bootstrap">Start Bootstrap</a>
         </div>
-        <div class="row d-flex justify-content-center" id="navBtnGroup">
-          <div class="col d-flex" id="colors">
-            <a href="">PORTFOLIO</a>
-            <a href="">ABOUTT</a>
-          </div>
+        <div class="justify-content-evenly">
+          <ul class="navbar-nav me-auto mb-2">
+            <li class="nav-item">
+              <a class="nav-link" href="#portfolio">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+          </ul>
         </div>
-        <button class="navToggler">
-          <span>MENU</span> <i class="fas fa-bars"></i>
-        </button>
       </div>
     </div>
     <section id="hero">
@@ -56,33 +56,33 @@
           <div class="row justify-content-center" id="portfolioItems">
             <div class="col-md-6 col-lg-4 mb-5">
               <img
-                class="img-fluid mx-auto" id="port-1"
+                class="img-fluid mx-auto"
                 src="bootstrap/img/cabin.png"
                 alt=""
               />
             </div>
-            <div class="col-md-6 col-lg-4 mb-5" id="port-2">
+            <div class="col-md-6 col-lg-4 mb-5" id="port-1">
               <img
                 class="img-fluid mx-auto"
                 src="bootstrap/img/cake.png"
                 alt=""
               />
             </div>
-            <div class="col-md-6 col-lg-4 mb-5" id="port-3">
+            <div class="col-md-6 col-lg-4 mb-5" id="port-1">
               <img
                 class="img-fluid mx-auto"
                 src="bootstrap/img/circus.png"
                 alt=""
               />
             </div>
-            <div class="col-md-6 col-lg-4 mb-5" id="port-4">
+            <div class="col-md-6 col-lg-4 mb-5" id="port-1">
               <img
                 class="img-fluid mx-auto"
                 src="bootstrap/img/game.png"
                 alt=""
               />
             </div>
-            <div class="col-md-6 col-lg-4 mb-5" id="port-5">
+            <div class="col-md-6 col-lg-4 mb-5" id="port-1">
               <img
                 class="img-fluid mx-auto"
                 src="bootstrap/img/safe.png"
@@ -111,7 +111,7 @@
           </h2>
 
           <div class="row mt-5">
-            <div class="col-lg-4 ms-auto">
+            <div class="kelimeyapma col-lg-4 ms-auto">
               <p class="lead">
                 Freelancer is a free bootstrap theme created by Start Bootstrap.
                 The download includes the complete source files including HTML,
@@ -119,7 +119,7 @@
                 easy customization.
               </p>
             </div>
-            <div class="col-lg-4 me-auto">
+            <div class="kelimeyapma col-lg-4 me-auto">
               <p class="lead">
                 You can create your own custom avatar for the masthead, change
                 the icon in the dividers, and add your email address to the
@@ -140,7 +140,7 @@
           <div class="row">
             <div class="col-lg-4 mb-5 mb-lg-0">
               <h4 class="text-uppercase mb-4" id="loc">Location</h4>
-              <p class="lead mb-0">
+              <p class="kelimeyapma mb-0">
                 2215 John Daniel Drive
                 <br />
                 Clark, MO 65243
@@ -149,7 +149,7 @@
 
             <div class="col-lg-4 mb-5 mb-lg-0">
               <h4 class="text-uppercase mb-4">Around the Web</h4>
-              <p class="lead mb-0">
+              <p class="kelimeyapma mb-0">
                 Lorem ipsum dolor sit abet connecter adipisicing elit.
                 Recusance, ipsum!
               </p>
@@ -157,7 +157,7 @@
 
             <div class="col-lg-4">
               <h4 class="text-uppercase mb-4">About Freelancer</h4>
-              <div class="lead mb-0">
+              <div class="kelimeyapma mb-0">
                 <p>
                   Freelancer is a free to use, MIT licensed Bootstrap theme
                   created by
